<?xml version="1.0"?>
<package format="3">
  <name>ttt_game</name>
  <version>0.0.0</version>
  <description>Tic-Tac-Toe game logic node</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ttt_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

