<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ttt_ik</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shai.zucker@gmail.com">shai</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ttt_msgs</depend>

<export>
  <build_type>ament_python</build_type>
</export>

  
</package>
